fixed immutable groups